--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -151,7 +151,7 @@
     "\n",
     "            row.append(item_str)\n",
     "            \n",
-    "        print(' '.join(row))"
+    "        print('  '.join(row))"
    ]
   },
   {
@@ -203,8 +203,8 @@
       "\u001b[32mPareto optimal\u001b[0m\n",
       "\u001b[34mBoth optimal\u001b[0m\n",
       "\n",
-      "\u001b[32m    [1. 1.]\u001b[0m \u001b[34m[0.66 2.  ]\u001b[0m\n",
-      "\u001b[34m[2.   0.66]\u001b[0m     [0. 0.]\n"
+      "\u001b[32m    [1. 1.]\u001b[0m  \u001b[34m[0.31 2.  ]\u001b[0m\n",
+      "\u001b[34m[2.   0.31]\u001b[0m      [0. 0.]\n"
      ]
     }
    ],
@@ -225,8 +225,8 @@
       "\u001b[32mPareto optimal\u001b[0m\n",
       "\u001b[34mBoth optimal\u001b[0m\n",
       "\n",
-      "\u001b[34m[4 1]\u001b[0m [0 0]\n",
-      "[0 0] \u001b[34m[1 4]\u001b[0m\n"
+      "\u001b[34m[4 1]\u001b[0m  [0 0]\n",
+      "[0 0]  \u001b[34m[1 4]\u001b[0m\n"
      ]
     }
    ],
@@ -247,8 +247,8 @@
       "\u001b[32mPareto optimal\u001b[0m\n",
       "\u001b[34mBoth optimal\u001b[0m\n",
       "\n",
-      "\u001b[31m  [-5 -5]\u001b[0m \u001b[32m[  0 -10]\u001b[0m\n",
-      "\u001b[32m[-10   0]\u001b[0m \u001b[32m  [-1 -1]\u001b[0m\n"
+      "\u001b[31m  [-5 -5]\u001b[0m  \u001b[32m[  0 -10]\u001b[0m\n",
+      "\u001b[32m[-10   0]\u001b[0m  \u001b[32m  [-1 -1]\u001b[0m\n"
      ]
     }
    ],
@@ -269,8 +269,8 @@
       "\u001b[32mPareto optimal\u001b[0m\n",
       "\u001b[34mBoth optimal\u001b[0m\n",
       "\n",
-      "[ 0 10] \u001b[32m  [9 1]\u001b[0m\n",
-      "\u001b[32m  [7 8]\u001b[0m \u001b[32m[ 6 11]\u001b[0m\n"
+      "[ 0 10]  \u001b[32m  [9 1]\u001b[0m\n",
+      "\u001b[32m  [7 8]\u001b[0m  \u001b[32m[ 6 11]\u001b[0m\n"
      ]
     }
    ],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,16 +291,16 @@
       "\u001b[32mPareto optimal\u001b[0m\n",
       "\u001b[34mBoth optimal\u001b[0m\n",
       "\n",
-      "[-48  27]   [35 -5] [-50 -33] [ 17 -24] [-20  31]   [34 10] [ 41 -18] [ 11 -46] [-13 -23]   [ 5 42]\n",
-      "\u001b[32m  [42 25]\u001b[0m [ 10 -15]   [27 -4]   [-9 -5]   [ 2 -9] [ 39 -25] [-36 -34] \u001b[34m  [36 34]\u001b[0m [-38  23] [-50  -6]\n",
-      "[-43  -6] [-21 -14] [ 17 -39]   [-4  8] [-28 -31] [-20  -5] [-46 -19] [-28  23] [ 23 -43] [-32  23]\n",
-      "[ 39 -21]   [35 12]   [20 11] [-16  28] [ 18 -18] [-16 -24] [-43  39]   [21 21]   [21 42]   [27 25]\n",
-      "[ 20 -23] [-49   1] [-17 -46] [ 26 -14] [-38  38]   [10 38] [ 34 -40] [-22 -13] [-30  30]   [ 4 23]\n",
-      "[-26 -41] [-37 -48] [-14 -46]   [29 -8] [-39  15] \u001b[32m  [35 39]\u001b[0m [ 20 -27] [-18  19] [  6 -33] [ 28 -11]\n",
-      "  [ 2 35]   [ 3 -4] [ 37 -11]   [34 39] [-27 -28] [-18 -10]   [10 26] \u001b[32m  [23 43]\u001b[0m   [19 39]   [18 -9]\n",
-      "[ 24 -34] \u001b[31m  [35 20]\u001b[0m [ -7 -30] [ 38 -36] [ 40 -18]   [ 1 15] \u001b[32m[ 46 -18]\u001b[0m [ 22 -13] [ 10 -33] [ 43 -47]\n",
-      "  [24  5] [-50 -47] [-26 -14] [ -6 -49] [-41  22] [-23 -34] [ 28 -11] [  0 -33] \u001b[32m  [45 19]\u001b[0m [-42  14]\n",
-      "[-42 -17]   [22 29] [-47  36] [-38  48] \u001b[32m  [22 49]\u001b[0m   [29 -6] [ 17 -37] [ 23 -32]   [ 7 43] [ 13 -49]\n"
+      "[-15 -17]  \u001b[32m  [46 41]\u001b[0m  \u001b[34m  [34 48]\u001b[0m  [ 13 -11]  \u001b[32m  [43 42]\u001b[0m    [10 28]  [-16 -26]  [-21 -28]  [ 27 -39]  [ 15 -25]\n",
+      "[-19 -32]    [-7 29]  [ 30 -15]  [ -8 -42]    [-4  7]    [45 15]  [ 30 -20]    [12 20]  [-50 -50]  [-25 -12]\n",
+      "  [29 14]    [26 21]  [  7 -19]  [-26 -23]    [45  4]  [-38  20]    [35 38]  [-30  36]    [31 40]    [38  5]\n",
+      "[ 17 -19]  [-36  48]    [ 2 35]  [-39  37]  \u001b[32m[-15  49]\u001b[0m    [-3 10]    [25 45]  [-22 -27]    [ 9 16]    [18 27]\n",
+      "[-44  19]    [-4 42]  [-41  -8]    [20 30]  [-13  42]  [  7 -23]  [-32  35]  [-31 -40]    [-5  0]  [-49  34]\n",
+      "  [ 6 17]    [35 26]  [-35  35]  [ 20 -47]  [ 45 -18]    [22 17]  [ 31 -26]    [32 -6]  [-44  40]  [ 37 -14]\n",
+      "[ 11 -27]  [ 13 -38]    [29  8]  [  9 -49]    [31 -4]  \u001b[32m[-15  49]\u001b[0m  [-33  42]  [-46  18]  [-10 -42]    [37 -5]\n",
+      "[-28 -22]    [ 9 47]    [23 -5]    [21 -7]    [38 25]    [26 20]  [-37 -49]    [36  0]    [ 9 -6]  [ 23 -41]\n",
+      "[ 35 -12]  [-22 -36]  [-13 -34]  [ -9 -35]  [-26  -6]  \u001b[31m  [45 29]\u001b[0m  [-26  22]  [-29   9]  [ 45 -27]  [  0 -45]\n",
+      "[-30  28]  [ 17 -26]  [-15  29]  [-22 -28]    [11 -6]  [ 33 -49]    [44 38]  [-32 -13]  [-45  28]  [-27  44]\n"
      ]
     }
    ],
@@ -309,11 +309,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Поиск смешанных стратегий"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "u = np.ones(2)\n",
+    "\n",
+    "A = var_15[:,:,0]\n",
+    "B = var_15[:,:,1]\n",
+    "\n",
+    "v1 = 1/(u.dot(inv(A)).dot(u))\n",
+    "v2 = 1/(u.dot(inv(B)).dot(u))\n",
+    "\n",
+    "x = v2 * u.dot(inv(B))\n",
+    "y = v1 * u.dot(inv(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:\n",
+      "[[0 9]\n",
+      " [7 6]]\n",
+      "B:\n",
+      "[[10  1]\n",
+      " [ 8 11]]\n",
+      "\n",
+      "v1: 6.3\n",
+      "v2: 8.5\n",
+      "\n",
+      "x: [0.25 0.75]\n",
+      "y: [0.1 0.9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('A:')\n",
+    "print(A)\n",
+    "print('B:')\n",
+    "print(B)\n",
+    "print()\n",
+    "print('v1:', round(v1, 3))\n",
+    "print('v2:', round(v2, 3))\n",
+    "print()\n",
+    "print('x:', x)\n",
+    "print('y:', y)"
+   ]
   }
  ],
  "metadata": {
