--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -59,24 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
     "# массив индексов максимального элемента\n",
     "def max_item_indexes(vector):\n",
-    "    indexes = np.linspace(0, vector.shape[0] - 1, vector.shape[0], dtype = int)\n",
+    "    indexes = np.linspace(0, vector.shape[0] - 1, vector.shape[0], dtype = int)   \n",
     "    \n",
     "    return indexes[np.isin(vector, np.max(vector))]\n",
     "\n",
     "def find_nash_optimal(game_matrix):\n",
     "    # индексы наилучших стратегий первого игрока при i-й стратегии второго\n",
     "    def first_max_ids(i):\n",
-    "        return max_item_indexes(game_matrix[:, i, 0])\n",
+    "        indexes = max_item_indexes(game_matrix[:, i, 0])\n",
+    "            \n",
+    "        return indexes[game_matrix[indexes, i, 1] >= np.max(game_matrix[indexes, i, 1])]\n",
     "    \n",
     "    # индексы наилучших стратегий второго игрока при i-й стратегии первого\n",
     "    def second_max_ids(i):\n",
-    "        return max_item_indexes(game_matrix[i, :, 1])\n",
+    "        indexes = max_item_indexes(game_matrix[i, :, 1])\n",
+    "        \n",
+    "        return indexes[game_matrix[indexes, i, 0] >= np.max(game_matrix[indexes, i, 0])]\n",
     "    \n",
     "    optimal_strats = []\n",
     "    \n",
@@ -100,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -203,8 +207,8 @@
       "\u001b[32mPareto optimal\u001b[0m\n",
       "\u001b[34mBoth optimal\u001b[0m\n",
       "\n",
-      "\u001b[32m    [1. 1.]\u001b[0m  \u001b[34m[0.31 2.  ]\u001b[0m\n",
-      "\u001b[34m[2.   0.31]\u001b[0m      [0. 0.]\n"
+      "\u001b[32m    [1. 1.]\u001b[0m  \u001b[34m[0.58 2.  ]\u001b[0m\n",
+      "\u001b[34m[2.   0.58]\u001b[0m      [0. 0.]\n"
      ]
     }
    ],
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# game_10 = np.random.randint(0, 10, (10, 10, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -291,21 +311,21 @@
       "\u001b[32mPareto optimal\u001b[0m\n",
       "\u001b[34mBoth optimal\u001b[0m\n",
       "\n",
-      "[-15 -17]  \u001b[32m  [46 41]\u001b[0m  \u001b[34m  [34 48]\u001b[0m  [ 13 -11]  \u001b[32m  [43 42]\u001b[0m    [10 28]  [-16 -26]  [-21 -28]  [ 27 -39]  [ 15 -25]\n",
-      "[-19 -32]    [-7 29]  [ 30 -15]  [ -8 -42]    [-4  7]    [45 15]  [ 30 -20]    [12 20]  [-50 -50]  [-25 -12]\n",
-      "  [29 14]    [26 21]  [  7 -19]  [-26 -23]    [45  4]  [-38  20]    [35 38]  [-30  36]    [31 40]    [38  5]\n",
-      "[ 17 -19]  [-36  48]    [ 2 35]  [-39  37]  \u001b[32m[-15  49]\u001b[0m    [-3 10]    [25 45]  [-22 -27]    [ 9 16]    [18 27]\n",
-      "[-44  19]    [-4 42]  [-41  -8]    [20 30]  [-13  42]  [  7 -23]  [-32  35]  [-31 -40]    [-5  0]  [-49  34]\n",
-      "  [ 6 17]    [35 26]  [-35  35]  [ 20 -47]  [ 45 -18]    [22 17]  [ 31 -26]    [32 -6]  [-44  40]  [ 37 -14]\n",
-      "[ 11 -27]  [ 13 -38]    [29  8]  [  9 -49]    [31 -4]  \u001b[32m[-15  49]\u001b[0m  [-33  42]  [-46  18]  [-10 -42]    [37 -5]\n",
-      "[-28 -22]    [ 9 47]    [23 -5]    [21 -7]    [38 25]    [26 20]  [-37 -49]    [36  0]    [ 9 -6]  [ 23 -41]\n",
-      "[ 35 -12]  [-22 -36]  [-13 -34]  [ -9 -35]  [-26  -6]  \u001b[31m  [45 29]\u001b[0m  [-26  22]  [-29   9]  [ 45 -27]  [  0 -45]\n",
-      "[-30  28]  [ 17 -26]  [-15  29]  [-22 -28]    [11 -6]  [ 33 -49]    [44 38]  [-32 -13]  [-45  28]  [-27  44]\n"
+      "[5 6]  [1 4]  [5 9]  [6 4]  [8 9]  [8 7]  [1 1]  [3 5]  [1 0]  [9 7]\n",
+      "[9 5]  [9 0]  [7 5]  [0 0]  [7 8]  [2 2]  [3 1]  [5 4]  [4 9]  [6 8]\n",
+      "[8 7]  [7 2]  [2 7]  [7 3]  [1 5]  [7 3]  [3 4]  [5 7]  [6 7]  [0 7]\n",
+      "[3 7]  [5 4]  [4 6]  [1 5]  [4 7]  [1 0]  [6 0]  [5 5]  [9 4]  [6 1]\n",
+      "[7 9]  [5 7]  [8 3]  [2 2]  [6 5]  [5 0]  [8 7]  [6 0]  [5 8]  [0 6]\n",
+      "[8 5]  [0 2]  [0 6]  [7 6]  [8 4]  [4 9]  [2 8]  [2 3]  \u001b[34m[9 9]\u001b[0m  [2 1]\n",
+      "[9 8]  [3 1]  [3 2]  \u001b[31m[8 8]\u001b[0m  [3 0]  [7 0]  [2 7]  [8 3]  [8 1]  [4 2]\n",
+      "[6 4]  [1 4]  [7 4]  [8 7]  [5 8]  [9 2]  [9 5]  [3 4]  [4 7]  [3 2]\n",
+      "[4 2]  [3 0]  [5 6]  [3 7]  [9 6]  [6 1]  [7 3]  [9 5]  [2 5]  [0 5]\n",
+      "[8 1]  [2 7]  [8 2]  [3 4]  [1 5]  [3 7]  \u001b[34m[9 9]\u001b[0m  [3 0]  [4 3]  [4 1]\n"
      ]
     }
    ],
    "source": [
-    "print_game_solution(np.random.randint(-50, 50, (10, 10, 2)))"
+    "print_game_solution(game_10)"
    ]
   },
   {
@@ -335,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -369,6 +389,73 @@
     "print('x:', x)\n",
     "print('y:', y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True])"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1, 2]) > np.array([2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True])"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1, 2]) > 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1, 2])[[True, False]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
