--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,8 +207,8 @@
       "\u001b[32mPareto optimal\u001b[0m\n",
       "\u001b[34mBoth optimal\u001b[0m\n",
       "\n",
-      "\u001b[32m    [1. 1.]\u001b[0m  \u001b[34m[0.58 2.  ]\u001b[0m\n",
-      "\u001b[34m[2.   0.58]\u001b[0m      [0. 0.]\n"
+      "\u001b[32m    [1. 1.]\u001b[0m  \u001b[34m[0.84 2.  ]\u001b[0m\n",
+      "\u001b[34m[2.   0.84]\u001b[0m      [0. 0.]\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -284,23 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# game_10 = np.random.randint(0, 10, (10, 10, 2))"
+    "game_10 = np.random.randint(-50, 50, (10, 10, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -311,16 +304,16 @@
       "\u001b[32mPareto optimal\u001b[0m\n",
       "\u001b[34mBoth optimal\u001b[0m\n",
       "\n",
-      "[5 6]  [1 4]  [5 9]  [6 4]  [8 9]  [8 7]  [1 1]  [3 5]  [1 0]  [9 7]\n",
-      "[9 5]  [9 0]  [7 5]  [0 0]  [7 8]  [2 2]  [3 1]  [5 4]  [4 9]  [6 8]\n",
-      "[8 7]  [7 2]  [2 7]  [7 3]  [1 5]  [7 3]  [3 4]  [5 7]  [6 7]  [0 7]\n",
-      "[3 7]  [5 4]  [4 6]  [1 5]  [4 7]  [1 0]  [6 0]  [5 5]  [9 4]  [6 1]\n",
-      "[7 9]  [5 7]  [8 3]  [2 2]  [6 5]  [5 0]  [8 7]  [6 0]  [5 8]  [0 6]\n",
-      "[8 5]  [0 2]  [0 6]  [7 6]  [8 4]  [4 9]  [2 8]  [2 3]  \u001b[34m[9 9]\u001b[0m  [2 1]\n",
-      "[9 8]  [3 1]  [3 2]  \u001b[31m[8 8]\u001b[0m  [3 0]  [7 0]  [2 7]  [8 3]  [8 1]  [4 2]\n",
-      "[6 4]  [1 4]  [7 4]  [8 7]  [5 8]  [9 2]  [9 5]  [3 4]  [4 7]  [3 2]\n",
-      "[4 2]  [3 0]  [5 6]  [3 7]  [9 6]  [6 1]  [7 3]  [9 5]  [2 5]  [0 5]\n",
-      "[8 1]  [2 7]  [8 2]  [3 4]  [1 5]  [3 7]  \u001b[34m[9 9]\u001b[0m  [3 0]  [4 3]  [4 1]\n"
+      "[-16  -4]  [-43  -6]  [-48 -28]  [-41  41]    [ 6 -1]  [-14  -2]  [ -5 -15]    [18 14]  [ 29 -49]    [-2 -3]\n",
+      "[-23  13]    [14 21]    [24 -3]  [-19  47]  [ -1 -24]  [-14  15]    [23 45]    [37 -4]    [11 33]    [ 2 -3]\n",
+      "[ 32 -33]  [  6 -19]  [ 31 -23]  [-36  27]  [-44  34]    [ 2 -9]  [-41 -31]    [25  3]  [-46  23]    [43 37]\n",
+      "  [37 -4]  [-32   1]  \u001b[31m  [43 42]\u001b[0m    [18 10]  [ 18 -29]  [ 27 -27]  [-38 -33]  [-15  19]  [-34  41]    [-4 -8]\n",
+      "  [36 47]  [-45 -24]  [-44 -22]  [-34   7]    [ 4 -5]    [42 11]  [-33 -28]  [-19 -34]  [ 11 -11]  [-21  36]\n",
+      "[-38  -5]    [41 -2]    [38  7]  [-24 -23]  \u001b[31m  [44 12]\u001b[0m  [ 45 -48]    [17  9]  [-12   8]    [25  0]  [ 12 -18]\n",
+      "[-48 -17]  [ 12 -19]  [ 33 -35]  [-18 -37]  [-30 -12]  [-41  20]  \u001b[34m  [49 47]\u001b[0m  [-33  13]    [35 42]    [48 36]\n",
+      "[-46  24]  [-16   8]  [-43   2]    [10 28]  [-22 -16]  [-17  14]  [ 36 -21]  [ 24 -21]  [ 41 -15]  [-43 -47]\n",
+      "[-13 -34]    [-4 -6]  [-32 -49]    [30 12]  [-28  -3]  [-32 -17]  [-24  19]  [-28 -11]    [25 10]  [ 37 -30]\n",
+      "[-25   9]  [-27 -41]  [-27  29]  [ -6 -37]    [30 30]  [-17 -46]  [-33 -46]    [ 9 22]  [-30   3]    [ 3 -1]\n"
      ]
     }
    ],
@@ -337,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,73 +382,6 @@
     "print('x:', x)\n",
     "print('y:', y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False,  True])"
-      ]
-     },
-     "execution_count": 206,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([1, 2]) > np.array([2, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False,  True])"
-      ]
-     },
-     "execution_count": 208,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([1, 2]) > 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1])"
-      ]
-     },
-     "execution_count": 207,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([1, 2])[[True, False]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
