Bruteforce pairs instead of all combinations

--- a/rk.ipynb
+++ b/rk.ipynb
@@ -23,28 +23,14 @@
    "source": [
     "def generate_sets(size, players = None):\n",
     "    def to_bin_vector(value):\n",
-    "        return tuple([(value >> i) & 1 for i in range(size)])\n",
+    "        return np.array([(value >> i) & 1 for i in range(size)])\n",
     "    \n",
     "    if players is None:\n",
-    "        players = [i for i in range(size)]\n",
+    "        players = np.arange(size)\n",
     "        \n",
-    "    sets = []\n",
-    "\n",
-    "    for n in range(2**size):\n",
-    "        combination = to_bin_vector(n)\n",
-    "        \n",
-    "        suitable = True\n",
-    "        \n",
-    "        for i in range(len(combination)):\n",
-    "            if combination[i] != 0 and i not in players:\n",
-    "                suitable = False\n",
-    "                break\n",
-    "                \n",
-    "        if suitable:\n",
-    "            sets.append(combination)\n",
+    "    banned_ids = np.delete(np.arange(size), players)\n",
     "    \n",
-    "    return sets\n",
-    "                "
+    "    return [tuple(to_bin_vector(n)) for n in range(2**size) if (to_bin_vector(n)[banned_ids] == 0).all()]"
    ]
   },
   {
@@ -53,14 +39,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_intersects(array1, array2):\n",
-    "    for i in range(len(array1)):\n",
-    "        if 1 == array1[i] == array2[i]:\n",
-    "            return True\n",
-    "    return False\n",
+    "def is_intersects(lhs, rhs):\n",
+    "    return np.minimum(np.array(lhs) == 1, np.array(rhs) == 1).any()\n",
     "\n",
     "def indexes_array(bitvector):\n",
-    "    return np.linspace(0, bitvector.shape[0] - 1, bitvector.shape[0], dtype = int)[bitvector]\n",
+    "    return np.arange(bitvector.shape[0])[bitvector]\n",
     "\n",
     "def is_supper_additive(size, prices):\n",
     "    all_combinations = generate_sets(size)\n",
@@ -71,63 +54,41 @@
     "        player_ids = indexes_array(np.array(combination) == 1)\n",
     "\n",
     "        subcombinations = np.array(generate_sets(size, player_ids))\n",
-    "\n",
-    "        subcombination_combinations = np.array(generate_sets(len(subcombinations)))\n",
-    "\n",
-    "        for subcomb_comb in subcombination_combinations:\n",
-    "            current_combination = subcombinations[subcomb_comb == 1]\n",
-    "\n",
-    "            if current_combination.shape[0] == 0:\n",
-    "                continue\n",
-    "\n",
-    "            intersects = False\n",
-    "\n",
-    "            for i in range(len(current_combination)):\n",
-    "                for j in range(len(current_combination)):\n",
-    "                    if i != j and is_intersects(current_combination[i], current_combination[j]):\n",
-    "                        intersects = True\n",
-    "                        break\n",
-    "\n",
-    "                if intersects:\n",
-    "                    break\n",
-    "            if intersects:\n",
-    "                continue\n",
-    "\n",
-    "            summary_price = 0\n",
-    "\n",
-    "            for comb in current_combination:\n",
-    "                summary_price += prices[tuple(comb)]\n",
+    "        \n",
+    "        for i in range(len(subcombinations)):\n",
+    "            for j in range(i + 1, len(subcombinations)):\n",
+    "                lhs = tuple(subcombinations[i])\n",
+    "                rhs = tuple(subcombinations[j])\n",
     "                \n",
-    "            if summary_price > comb_price:\n",
-    "                return False, combination, [tuple(i) for i in current_combination]\n",
+    "                if is_intersects(lhs, rhs):\n",
+    "                    continue\n",
+    "                \n",
+    "                if comb_price < prices[lhs] + prices[rhs]:\n",
+    "                    return (False, combination, [lhs, rhs])\n",
     "\n",
     "    return (True, )\n",
+    "\n",
+    "def bit_where(func, lhs, rhs):\n",
+    "    return np.where(func(lhs == 1, rhs == 1), \n",
+    "                    np.ones(lhs.shape[0], dtype = int),\n",
+    "                    np.zeros(lhs.shape[0], dtype = int))\n",
     "\n",
     "def is_convex(size, prices):\n",
     "    all_combinations = generate_sets(size)\n",
     "\n",
-    "    for i in range(1, len(all_combinations)):\n",
+    "    for i in range(len(all_combinations)):\n",
     "        for j in range(i + 1, len(all_combinations)):\n",
-    "            if i != j:\n",
-    "                intersection = [0 for k in range(size)]\n",
-    "                union = [0 for k in range(size)]\n",
-    "                for k in range(size):\n",
-    "                    if all_combinations[i][k] == 1 and all_combinations[j][k] == 1:\n",
-    "                        intersection[k] = 1\n",
-    "                    if all_combinations[i][k] == 1 or all_combinations[j][k] == 1:\n",
-    "                        union[k] = 1\n",
-    "                        \n",
-    "                intersection = tuple(intersection)\n",
-    "                union = tuple(union)\n",
-    "                        \n",
-    "                price1 = prices[union] + prices[intersection]\n",
-    "                price2 = prices[all_combinations[i]] + prices[all_combinations[j]]\n",
+    "            lhs = np.array(all_combinations[i])\n",
+    "            rhs = np.array(all_combinations[j])\n",
+    "            \n",
+    "            intersection = tuple(bit_where(np.minimum, lhs, rhs))\n",
+    "            union = tuple(bit_where(np.maximum, lhs, rhs))\n",
+    "\n",
+    "            if prices[union] + prices[intersection] < prices[tuple(lhs)] + prices[tuple(rhs)]:\n",
+    "                print(prices[union] + prices[intersection], prices[tuple(lhs)] + prices[tuple(rhs)])\n",
+    "                return (False, intersection, union, tuple(lhs), tuple(rhs))\n",
     "                \n",
-    "                if price1 < price2:\n",
-    "                    print(price1, price2)\n",
-    "                    return (False, intersection, union, all_combinations[i], all_combinations[j])\n",
-    "                \n",
-    "    return True\n",
+    "    return (True, )\n",
     "\n",
     "\n",
     "def shaply_vector(size, prices, player):\n",
@@ -137,17 +98,10 @@
     "    \n",
     "    for S in sets:\n",
     "        if S[player] != 0:\n",
-    "            S_weight = np.sum(S)\n",
-    "\n",
-    "            # без и-го игрока\n",
-    "            S_i =list(S)\n",
-    "            S_i[player] = 0\n",
-    "            S_i = tuple(S_i)\n",
-    "\n",
-    "            summary += math.factorial(np.sum(S) - 1) * math.factorial(size - np.sum(S)) * (prices[S] - prices[S_i])\n",
+    "            summary += math.factorial(np.sum(S) - 1) * math.factorial(size - np.sum(S)) \\\n",
+    "                * (prices[S] - prices[tuple(np.where(np.arange(len(S)) == player, 0, S))])\n",
     "            \n",
-    "    return (1/math.factorial(size)) * summary       \n",
-    "        "
+    "    return (1 / math.factorial(size)) * summary"
    ]
   },
   {
@@ -273,13 +227,6 @@
     "print(np.round(vec, 3))\n",
     "print(round(np.sum(vec), 3))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
