--- a/rk.ipynb
+++ b/rk.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Работа с множествами игроков"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -30,7 +37,20 @@
     "        \n",
     "    banned_ids = np.delete(np.arange(size), players)\n",
     "    \n",
-    "    return [tuple(to_bin_vector(n)) for n in range(2**size) if (to_bin_vector(n)[banned_ids] == 0).all()]"
+    "    return [tuple(to_bin_vector(n)) for n in range(2**size) if (to_bin_vector(n)[banned_ids] == 0).all()]\n",
+    "\n",
+    "def is_intersects(lhs, rhs):\n",
+    "    return np.minimum(np.array(lhs) == 1, np.array(rhs) == 1).any()\n",
+    "\n",
+    "def indexes_array(bitvector):\n",
+    "    return np.arange(bitvector.shape[0])[bitvector]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Супераддитивность"
    ]
   },
   {
@@ -39,12 +59,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_intersects(lhs, rhs):\n",
-    "    return np.minimum(np.array(lhs) == 1, np.array(rhs) == 1).any()\n",
-    "\n",
-    "def indexes_array(bitvector):\n",
-    "    return np.arange(bitvector.shape[0])[bitvector]\n",
-    "\n",
     "def is_supper_additive(size, prices):\n",
     "    all_combinations = generate_sets(size)\n",
     "\n",
@@ -53,7 +67,7 @@
     "\n",
     "        player_ids = indexes_array(np.array(combination) == 1)\n",
     "\n",
-    "        subcombinations = np.array(generate_sets(size, player_ids))\n",
+    "        subcombinations = generate_sets(size, player_ids)\n",
     "        \n",
     "        for i in range(len(subcombinations)):\n",
     "            for j in range(i + 1, len(subcombinations)):\n",
@@ -66,8 +80,22 @@
     "                if comb_price < prices[lhs] + prices[rhs]:\n",
     "                    return (False, combination, [lhs, rhs])\n",
     "\n",
-    "    return (True, )\n",
-    "\n",
+    "    return (True, )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Выпуклось"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def bit_where(func, lhs, rhs):\n",
     "    return np.where(func(lhs == 1, rhs == 1), \n",
     "                    np.ones(lhs.shape[0], dtype = int),\n",
@@ -85,12 +113,24 @@
     "            union = tuple(bit_where(np.maximum, lhs, rhs))\n",
     "\n",
     "            if prices[union] + prices[intersection] < prices[tuple(lhs)] + prices[tuple(rhs)]:\n",
-    "                print(prices[union] + prices[intersection], prices[tuple(lhs)] + prices[tuple(rhs)])\n",
-    "                return (False, intersection, union, tuple(lhs), tuple(rhs))\n",
+    "                return (False, [intersection, union], [tuple(lhs), tuple(rhs)])\n",
     "                \n",
-    "    return (True, )\n",
-    "\n",
-    "\n",
+    "    return (True, )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Шэпли"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def shaply_vector(size, prices, player):\n",
     "    sets = generate_sets(size)\n",
     "    \n",
@@ -101,34 +141,34 @@
     "            summary += math.factorial(np.sum(S) - 1) * math.factorial(size - np.sum(S)) \\\n",
     "                * (prices[S] - prices[tuple(np.where(np.arange(len(S)) == player, 0, S))])\n",
     "            \n",
-    "    return (1 / math.factorial(size)) * summary"
+    "    return (1 / math.factorial(size)) * summary\n",
+    "\n",
+    "def is_group_rational(size, prices):\n",
+    "    individual_sum = np.sum([shaply_vector(size, prices, i) for i in range(size)])\n",
+    "    \n",
+    "    return abs(individual_sum - prices[tuple(np.ones(size))]) < 0.00001\n",
+    "    \n",
+    "def is_self_rational(size, prices):\n",
+    "    for i in range(size):\n",
+    "        key = np.zeros(size)\n",
+    "        key[i] = 1\n",
+    "        \n",
+    "        if shaply_vector(size, prices, i) < prices[tuple(key)]:\n",
+    "            return False\n",
+    "        \n",
+    "    return True"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "a1 = np.array([0, 1, 1])\n",
-    "a2 = np.array([0, 0, 1])\n",
-    "np.intersect1d(a1, a2)"
+    "## Решение варианта"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,26 +194,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(True,)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "is_supper_additive(4, prices_var15)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -181,35 +201,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17 18\n",
-      "(False, (0, 1, 0, 0), (1, 1, 1, 1), (1, 1, 0, 0), (0, 1, 1, 1))\n",
-      "3\n",
-      "14\n",
-      "6\n",
-      "12\n",
-      "\n",
-      "Not convex\n"
+      "Game is super additive\n"
      ]
     }
    ],
    "source": [
-    "conv = is_convex(4, prices_var15)\n",
+    "super_additive = is_supper_additive(4, prices_var15)\n",
     "\n",
-    "print(conv)\n",
-    "\n",
-    "for i in range(1, 5):\n",
-    "    print(prices_var15[conv[i]])\n",
-    "    \n",
-    "print()\n",
-    "if conv[0]:\n",
-    "    print('Is convex')\n",
+    "if super_additive[0]:\n",
+    "    print('Game is super additive')\n",
     "else:\n",
-    "    print('Not convex')"
+    "    print('Game is not super additive')\n",
+    "    print(super_additive[1], '<', super_additive[2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Game is not convex\n",
+      "v({1}) + v({0, 1, 2, 3}) < v({0, 1}) + v({1, 2, 3})\n",
+      "3 + 14 < 6 + 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "conv = is_convex(4, prices_var15)\n",
+    "    \n",
+    "if conv[0]:\n",
+    "    print('Game is convex')\n",
+    "else:\n",
+    "    print('Game is not convex')\n",
+    "    \n",
+    "    players1 = ['v({' + ', '.join(str(j) for j in indexes_array(np.array(i) == 1)) + '})' for i in conv[1]]\n",
+    "    players2 = ['v({' + ', '.join(str(j) for j in indexes_array(np.array(i) == 1)) + '})' for i in conv[2]]\n",
+    "    \n",
+    "    print(' + '.join(players1), '<', ' + '.join(players2))\n",
+    "    \n",
+    "    prices1 = [str(prices_var15[i]) for i in conv[1]]\n",
+    "    prices2 = [str(prices_var15[i]) for i in conv[2]]\n",
+    "    \n",
+    "    print(' + '.join(prices1), '<', ' + '.join(prices2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -226,6 +268,40 @@
     "\n",
     "print(np.round(vec, 3))\n",
     "print(round(np.sum(vec), 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Self rational: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Self rational:', is_self_rational(4, prices_var15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Group rational: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Group rational:', is_group_rational(4, prices_var15))"
    ]
   }
  ],
